# places

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  changelog.md  cspell.config.toml  data.json  hacs.json  inlang.config.js  places.py  prek.toml  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml  issue-branch.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: cleanup_prek_update_branches.py
.github/workflows/: black-action.yml  black_action.yml  black_automerge.yml  branch_action.yml  branch_action.yml.old  empty_commit.yml  ha_and_hacs_validate.yml  hacs_action.yml  hacs_validate.yml  hassfest.yml  hassfest_validate.yml  issue_action.yml  labeler.yml  linters.yml  my_python_linter.yml  mylint_action.yml  prek_autoupdate.yml  pytest_coverage.yml  release.yml  release_action.yml  release_action.yml.old  stale.yml  test_coverage.yml  validate.yml  version_update_and_zip_on_release.yml  zip_on_release.yml
custom_components/: __init__.py
custom_components/places/: __init__.py  advanced_options.py  attributes.py  basic_options.py  button.py  config_flow.py  config_schema.py  const.py  coordinator.py  entity.py  helpers.py  location.py  manifest.json  migration.py  osm_client.py  parse_osm.py  persistence.py  pipeline.py  select.py  sensor.py  strings.json  switch.py  text.py  tracker.py  update_sensor.py
custom_components/places/translations/: cs.json  en.json  it.json  ru.json  sk.json  ua.json  uk.json
docs/superpowers/plans/: 2026-05-16-places-architecture-cleanup.md  2026-05-31-store-persistence.md  2026-07-08-places-entity-redesign.md  2026-07-10-configuration-entities.md  2026-07-10-force-update-button.md
docs/superpowers/specs/: 2026-05-16-places-architecture-cleanup-design.md  2026-07-10-configuration-entities-design.md  2026-07-10-force-update-button-design.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a744b31802c100c7___init___py.html  z_a744b31802c100c7_advanced_options_py.html  z_a744b31802c100c7_attributes_py.html  z_a744b31802c100c7_basic_options_py.html  z_a744b31802c100c7_config_flow_py.html  z_a744b31802c100c7_config_schema_py.html  z_a744b31802c100c7_const_py.html  z_a744b31802c100c7_helpers_py.html  z_a744b31802c100c7_location_py.html  z_a744b31802c100c7_osm_client_py.html  z_a744b31802c100c7_parse_osm_py.html  z_a744b31802c100c7_persistence_py.html  z_a744b31802c100c7_pipeline_py.html  z_a744b31802c100c7_sensor_py.html  z_a744b31802c100c7_tracker_py.html  z_a744b31802c100c7_update_sensor_py.html
places.egg-info/: SOURCES.txt
tests/: __init__.py  conftest.py  test_advanced_options.py  test_attributes.py  test_basic_options.py  test_button.py  test_config_flow.py  test_display_options_integration.py  test_helpers.py  test_integration.py  test_location.py  test_migration.py  test_osm_client.py  test_parse_osm.py  test_persistence.py  test_pipeline.py  test_prek_autoupdate_workflow.py  test_select.py  test_sensor.py  test_switch.py  test_text.py  test_tracker.py  test_update_sensor.py
