[project]
name = "places"
dynamic = ["version"]
description = "Places Home Assistant integration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiohttp",
  "cachetools",
]

[tool.setuptools.dynamic]
version = {attr = "custom_components.places.const.VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[dependency-groups]
lint = [
  "homeassistant-stubs",
  "mypy",
  "prek",
  "ruff",
  "types-cachetools",
  "types-cffi",
  "types-greenlet",
  "types-PyMySQL",
  "types-pyRFC3339",
  "types-python-dateutil",
  "types-PyYAML",
  "types-requests",
  "types-setuptools",
]
pytest = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-homeassistant-custom-component",
  "pytest-timeout",
]
dev = [
    { include-group = "lint" },
    { include-group = "pytest" },
]

[tool.pytest.ini_options]
addopts = """
  --quiet
  --timeout=20
  --durations=10
  -o console_output_style=progress
  --cov=custom_components.places
  --cov-report=term-missing
  --cov-report=html
"""
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["custom_components.places"]
relative_files = true
parallel = false

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.14"
platform = "linux"
explicit_package_bases = true
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["deprecated", "ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["annotation-unchecked"]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
warn_return_any = false
warn_unreachable = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disable_error_code = ["import-untyped", "arg-type", "method-assign", "no-untyped-def", "index", "union-attr", "operator"]
check_untyped_defs = false
warn_unused_ignores = false

[tool.ruff]
line-length = 100
indent-width = 4
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",   # missing-type-args
    "ANN003",   # missing-type-kwargs
    "ANN401",   # any-type
    "ARG",      # flake8-unused-arguments
    "EM",       # flake8-errmsg
    "ERA",      # eradicate
    "FBT",      # flake8-boolean-trap
    "PLC1901",  # {existing} can be simplified to {replacement} as an empty string is falsey; too many false positives
    "PLR0904",  # Too many public methods
    "PLR0911",  # Too many return statements ({returns} > {max_returns})
    "PLR0912",  # Too many branches ({branches} > {max_branches})
    "PLR0913",  # Too many arguments to function call ({c_args} > {max_args})
    "PLR0914",  # Too many local variables
    "PLR0915",  # Too many statements ({statements} > {max_statements})
    "PLR0916",  # Too many Boolean expressions
    "PLR0917",  # Too many positional arguments
    "PLR1702",  # Too many nested blocks
    "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901",  # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PT011",    # pytest.raises({exception}) is too broad, set the `match` parameter or use a more specific exception
    "PT018",    # Assertion should be broken down into multiple parts
    "RUF001",   # String contains ambiguous unicode character.
    "RUF002",   # Docstring contains ambiguous unicode character.
    "RUF003",   # Comment contains ambiguous unicode character.
    "RUF015",   # Prefer next(...) over single element slice
    "S311",     # suspicious-non-cryptographic-random-usage
    "SIM103",   # Return the condition {condition} directly
    "SIM108",   # Use ternary operator {contents} instead of if-else-block
    "SIM115",   # Use context handler for opening files
    "TC001",    # Move application import {} into a type-checking block
    "TC002",    # Move third-party import {} into a type-checking block
    "TC003",    # Move standard library import {} into a type-checking block
    "TD003",    # missing-todo-link
    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY301",   # raise-within-try
    "TRY400",   # Use `logging.exception` instead of `logging.error`

    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "D206",     # docstring-tab-indentation
    "D300",     # triple-single-quotes
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "Q004",     # unnecessary-escaped-quote
    "W191",     # tab-indentation
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B017",    # Don't assert blind Exception
    "C90",     # mccabe, complexity
    "E501",    # line too long
    "S101",    # Use of assert detected
    "S105",    # Possible hardcoded password
    "S108",    # hardcoded-temp-file
    "SLF001",  # Private member accessed
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.components.air_quality.PLATFORM_SCHEMA" = "AIR_QUALITY_PLATFORM_SCHEMA"
"homeassistant.components.alarm_control_panel.PLATFORM_SCHEMA" = "ALARM_CONTROL_PANEL_PLATFORM_SCHEMA"
"homeassistant.components.binary_sensor.PLATFORM_SCHEMA" = "BINARY_SENSOR_PLATFORM_SCHEMA"
"homeassistant.components.button.PLATFORM_SCHEMA" = "BUTTON_PLATFORM_SCHEMA"
"homeassistant.components.calendar.PLATFORM_SCHEMA" = "CALENDAR_PLATFORM_SCHEMA"
"homeassistant.components.camera.PLATFORM_SCHEMA" = "CAMERA_PLATFORM_SCHEMA"
"homeassistant.components.climate.PLATFORM_SCHEMA" = "CLIMATE_PLATFORM_SCHEMA"
"homeassistant.components.conversation.PLATFORM_SCHEMA" = "CONVERSATION_PLATFORM_SCHEMA"
"homeassistant.components.cover.PLATFORM_SCHEMA" = "COVER_PLATFORM_SCHEMA"
"homeassistant.components.date.PLATFORM_SCHEMA" = "DATE_PLATFORM_SCHEMA"
"homeassistant.components.datetime.PLATFORM_SCHEMA" = "DATETIME_PLATFORM_SCHEMA"
"homeassistant.components.device_tracker.PLATFORM_SCHEMA" = "DEVICE_TRACKER_PLATFORM_SCHEMA"
"homeassistant.components.event.PLATFORM_SCHEMA" = "EVENT_PLATFORM_SCHEMA"
"homeassistant.components.fan.PLATFORM_SCHEMA" = "FAN_PLATFORM_SCHEMA"
"homeassistant.components.geo_location.PLATFORM_SCHEMA" = "GEO_LOCATION_PLATFORM_SCHEMA"
"homeassistant.components.humidifier.PLATFORM_SCHEMA" = "HUMIDIFIER_PLATFORM_SCHEMA"
"homeassistant.components.image.PLATFORM_SCHEMA" = "IMAGE_PLATFORM_SCHEMA"
"homeassistant.components.image_processing.PLATFORM_SCHEMA" = "IMAGE_PROCESSING_PLATFORM_SCHEMA"
"homeassistant.components.lawn_mower.PLATFORM_SCHEMA" = "LAWN_MOWER_PLATFORM_SCHEMA"
"homeassistant.components.light.PLATFORM_SCHEMA" = "LIGHT_PLATFORM_SCHEMA"
"homeassistant.components.lock.PLATFORM_SCHEMA" = "LOCK_PLATFORM_SCHEMA"
"homeassistant.components.media_player.PLATFORM_SCHEMA" = "MEDIA_PLAYER_PLATFORM_SCHEMA"
"homeassistant.components.notify.PLATFORM_SCHEMA" = "NOTIFY_PLATFORM_SCHEMA"
"homeassistant.components.number.PLATFORM_SCHEMA" = "NUMBER_PLATFORM_SCHEMA"
"homeassistant.components.remote.PLATFORM_SCHEMA" = "REMOTE_PLATFORM_SCHEMA"
"homeassistant.components.scene.PLATFORM_SCHEMA" = "SCENE_PLATFORM_SCHEMA"
"homeassistant.components.select.PLATFORM_SCHEMA" = "SELECT_PLATFORM_SCHEMA"
"homeassistant.components.sensor.PLATFORM_SCHEMA" = "SENSOR_PLATFORM_SCHEMA"
"homeassistant.components.siren.PLATFORM_SCHEMA" = "SIREN_PLATFORM_SCHEMA"
"homeassistant.components.stt.PLATFORM_SCHEMA" = "STT_PLATFORM_SCHEMA"
"homeassistant.components.switch.PLATFORM_SCHEMA" = "SWITCH_PLATFORM_SCHEMA"
"homeassistant.components.text.PLATFORM_SCHEMA" = "TEXT_PLATFORM_SCHEMA"
"homeassistant.components.time.PLATFORM_SCHEMA" = "TIME_PLATFORM_SCHEMA"
"homeassistant.components.todo.PLATFORM_SCHEMA" = "TODO_PLATFORM_SCHEMA"
"homeassistant.components.tts.PLATFORM_SCHEMA" = "TTS_PLATFORM_SCHEMA"
"homeassistant.components.vacuum.PLATFORM_SCHEMA" = "VACUUM_PLATFORM_SCHEMA"
"homeassistant.components.valve.PLATFORM_SCHEMA" = "VALVE_PLATFORM_SCHEMA"
"homeassistant.components.update.PLATFORM_SCHEMA" = "UPDATE_PLATFORM_SCHEMA"
"homeassistant.components.wake_word.PLATFORM_SCHEMA" = "WAKE_WORD_PLATFORM_SCHEMA"
"homeassistant.components.water_heater.PLATFORM_SCHEMA" = "WATER_HEATER_PLATFORM_SCHEMA"
"homeassistant.components.weather.PLATFORM_SCHEMA" = "WEATHER_PLATFORM_SCHEMA"
"homeassistant.core.DOMAIN" = "HOMEASSISTANT_DOMAIN"
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.category_registry" = "cr"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.floor_registry" = "fr"
"homeassistant.helpers.issue_registry" = "ir"
"homeassistant.helpers.label_registry" = "lr"
"homeassistant.util.dt" = "dt_util"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-third-party = ["homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
ignore-words-list = "hass"
skip = "custom_components/places/translations/cs.json,custom_components/places/translations/it.json,custom_components/places/translations/ru.json,custom_components/places/translations/sk.json,custom_components/places/translations/uk.json"
